--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
 
     //view model scope
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
 
     testImplementation 'junit:junit:4.13.2'
