--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-
-
-
-
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -55,6 +51,7 @@ dependencies {
 
     //room
     implementation "androidx.room:room-runtime:2.5.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     kapt "androidx.room:room-compiler:2.5.0"
     implementation "androidx.room:room-ktx:2.5.0"
 
@@ -70,4 +67,6 @@ dependencies {
     testImplementation "androidx.test.ext:junit-ktx:1.1.5"
     testImplementation "androidx.test:core-ktx:1.5.0"
     testImplementation 'org.robolectric:robolectric:4.9'
+    androidTestImplementation('androidx.test:runner:1.5.2')
+    androidTestImplementation ('androidx.test:rules:1.5.0')
 }
