--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ plugins {
 android {
     compileSdk 33
 
+    packagingOptions{
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/LICENSE-notice.md'
+    }
+
     buildFeatures{
         viewBinding = true
     }
@@ -54,22 +59,24 @@ dependencies {
     implementation 'com.sealwu.jsontokotlin:library:3.7.4'
 
     //room
-    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    kapt "androidx.room:room-compiler:2.5.0"
-    implementation "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
 
     //view model scope
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    testImplementation "androidx.test.ext:junit-ktx:1.1.5"
     testImplementation "androidx.test:core-ktx:1.5.0"
     testImplementation 'org.robolectric:robolectric:4.9'
     androidTestImplementation('androidx.test:runner:1.5.2')
